// Original file: src/proto/proto/industry.proto


export interface QueryIndustry {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'level1'?: (string);
  'level2'?: (number);
  'level3'?: (number);
  'level4'?: (number);
  'level5'?: (number);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_name'?: "name";
  '_level1'?: "level1";
  '_level2'?: "level2";
  '_level3'?: "level3";
  '_level4'?: "level4";
  '_level5'?: "level5";
}

export interface QueryIndustry__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'name'?: (string);
  'level1'?: (string);
  'level2'?: (number);
  'level3'?: (number);
  'level4'?: (number);
  'level5'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_name': "name";
  '_level1': "level1";
  '_level2': "level2";
  '_level3': "level3";
  '_level4': "level4";
  '_level5': "level5";
}
